# skipasmidr

./: .env  .gitignore  LICENSE  README.md  deploy.py  pyproject.toml  stack.py  stack.yaml
code/dags/: example_dag.py
code/dagster/: __init__.py
code/libs/: __init__.py
code/notebooks/: example.ipynb
code/prefect/: example_flow.py
config/: credentials.env  dashboard.yaml  dependencies.yaml  external-links.yaml  mcp.yaml  services.env
config/mcp/: docker.mcp.yaml  mariadb.mcp.yaml  mcp.yaml  postgres.mcp.yaml  traefik.mcp.yaml
core/dashy/: README.md  conf.yml  dashy.fragment.json  docker-compose.yml  heimdall.fragment.json  service.json
core/heimdall/: dashy.fragment.json  docker-compose.yml  heimdall.fragment.json  import_apps.py
core/homepage/: dashy.fragment.json  docker-compose.yml
core/portainer/: README.md  dashy.fragment.json  docker-compose.yml  heimdall.fragment.json  service.json
core/traefik/: README.md  dashy.fragment.json  docker-compose.yml  dynamic.yml  heimdall.fragment.json  mcp.py  service.json  traefik.yml
infra/databases/clickhouse/: README.md  dashy.fragment.json  (+1 more)
libs/: __init__.py  logging.py
libs/dashboard/: __init__.py  fragment.py  manager.py
libs/mcp/: __init__.py  base.py  builder.py
libs/testing/: __init__.py  e2e.py
mcp/: README.md  __init__.py  docker_server.py  generate_config.py  postgres_server.py
profiles/: ai-minimal.yaml  ai.yaml  automation.yaml  corporativo.yaml  data.yaml  developer.yaml  full.yaml  iot.yaml  lowcode.yaml  monitoring.yaml  security.yaml  social.yaml
volumes/: .gitkeep
(+332 files in other folders)
