[project]
name = "docker-infra"
version = "1.0.0"
description = "Modular Docker infrastructure CLI for development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
deploy = "deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
