[project]
name = "docker-infra"
version = "1.0.0"
description = "Modular Docker infrastructure CLI for development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = []
mcp = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aioredis>=2.0.0",
    "httpx>=0.27.0",
    "motor>=3.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
